--- a/content.css
+++ b/content.css
@@ -1,4 +1,7 @@
+.suggested-templates,
 .suggested-revievers-groups {
+    position: absolute;
+    z-index: 888;
     border: 1px solid #ccc;
     border-radius: 3px;
     display: block;
@@ -6,12 +9,37 @@
     outline: none;
     box-shadow: 0 3px 6px rgba(0,0,0,0.2);
 }
+
+.suggested-templates option,
 .suggested-revievers-groups option {
-    padding: 4px 5px;
-    font-size: 13px;
+  font-size: 13px;
+  background-color: #fff;
+  color: #333;
+  padding: 8px 5px;
+  display: flex;
+  align-items: baseline;
 }
+
 .suggested-revievers-groups option:after {
   content: " " attr(data-reviewers);
   color: lightgray;
   font-size: .8em;
+  margin-left: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.suggested-templates option:before {
+  content: " " attr(data-template-name);;
+  margin-right: 5px;
+}
+.suggested-templates option:after {
+  content: " " attr(data-template-body);
+  color: lightgray;
+  font-size: .8em;
+  margin-left: 5px;
+  margin-right: 5px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
