--- a/content.css
+++ b/content.css
@@ -1,10 +1,18 @@
 .pr-helper-overlay {
-  background: black;
   position: fixed;
+  height: 0;
   width: 100%;
-  height: 100%;
   z-index: 10000;
+  opacity: 0;
+  top: 50%;
+  transition: all .25s;
+}
+.pr-helper-overlay.active {
+  background: black;
+  height: 100%;
   opacity: .5;
+  left: 0;
+  top: 0;
 }
 
 .pr-helper-suggestion {
